--- a/Views/Admin/AddSubCs.cshtml
+++ b/Views/Admin/AddSubCs.cshtml
@@ -44,25 +44,19 @@
             <div class="row">
 
                 <div class="col-lg-3">
-                    <label asp-for="Codecssub">รหัสรายวิชาcs</label>
-                    <input type="text" asp-for="Codecssub" class="form-control">
-                    <span asp-validation-for="Codecssub" class="text-danger"></span>
-                </div>
-
-                <div class="col-lg-3">
-                    <label asp-for="Codecoursecs">รหัสหลักสูตรcs</label>
+                    <label asp-for="Codecoursecs">รหัสหลักสูตรวิทย์คอม</label>
                     <input type="text" asp-for="Codecoursecs" class="form-control">
                     <span asp-validation-for="Codecoursecs" class="text-danger"></span>
                 </div>
 
                 <div class="col-lg-3">
-                    <label asp-for="Codesubgroup">รหัสกลุ่มวิชาcs</label>
+                    <label asp-for="Codesubgroup">รหัสกลุ่มวิชาวิทย์คอม</label>
                     <input type="text" asp-for="Codesubgroup" class="form-control">
                     <span asp-validation-for="Codesubgroup" class="text-danger"></span>
                 </div>
 
                 <div class="col-lg-3">
-                    <label asp-for="Codesubcs">รหัสวิชาcs</label>
+                    <label asp-for="Codesubcs">รหัสวิชาวิทย์คอม</label>
                     <input type="text" asp-for="Codesubcs" class="form-control">
                     <span asp-validation-for="Codesubcs" class="text-danger"></span>
                 </div>
