--- a/Views/Admin/DetailSubCs.cshtml
+++ b/Views/Admin/DetailSubCs.cshtml
@@ -42,7 +42,7 @@
 </head>
 <body>
     <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:235px;background:white;" id="mySidebar">
-        <span class="w3-bar-item w3-border-bottom w3-large w3-white">User</span>
+        <span class="w3-bar-item w3-border-bottom w3-large w3-white">Admin</span>
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
         <a class="w3-bar-item w3-button w3-pale-red" href="@Url.Action("CourseCsAdmin", "Admin")">ย้อนกลับ</a>
