--- a/Views/Admin/PairCourse.cshtml
+++ b/Views/Admin/PairCourse.cshtml
@@ -57,44 +57,9 @@
 
         <form method="POST" asp-controller="Admin" asp-action="PairCourse">
             <div class="row">
-                <div class="col-lg-3">
-                    <label asp-for="Data.CodeCoursetrans">รหัสเทียบหลักสูตร</label>
-                    <select asp-for="Data.CodeCoursetrans" class="form-control" aria-required="true" placeholder="รหัสเทียบหลักสูตร">
-                        <option hidden value=""></option>
-                        @foreach (var item in Model.CourseCsTr)
-                        {
-                            <option value="@item.Value">
-                                @item.Text
-                            </option>
-                        }
-                       
-                    
-                    </select>
-                    <span asp-validation-for="Data.CodeCoursetrans" class="text-danger"></span>
-                </div>
-                <div class="col-lg-3">
-                    
-
-
-                    <label asp-for="Data.Coursetra">รหัสหลักสูตรปวส</label>
-                    <select asp-for="Data.Coursetra" class="form-control" aria-required="true" placeholder="รหัสหลักสูตรปวส">
-                        <option hidden value=""></option>
-                        @foreach (var item in Model.TraCourse)
-                        {
-                            <option value="@item.Value">
-                                @item.Text
-                            </option>
-                        }
-
-
-                    </select>
-                    <span asp-validation-for="Data.Coursetra" class="text-danger"></span>
-
-
-                </div>
 
                 <div class="col-lg-3">
-              
+
 
 
                     <label asp-for="Data.Coursecs">รหัสหลักสูตรวิทย์คอม</label>
@@ -112,6 +77,29 @@
                     <span asp-validation-for="Data.Coursecs" class="text-danger"></span>
 
                 </div>
+
+                <div class="col-lg-3">
+                    
+
+
+                    <label asp-for="Data.Coursetra">รหัสหลักสูตรปวส.</label>
+                    <select asp-for="Data.Coursetra" class="form-control" aria-required="true" placeholder="รหัสหลักสูตรปวส">
+                        <option hidden value=""></option>
+                        @foreach (var item in Model.TraCourse)
+                        {
+                            <option value="@item.Value">
+                                @item.Text
+                            </option>
+                        }
+
+
+                    </select>
+                    <span asp-validation-for="Data.Coursetra" class="text-danger"></span>
+
+
+                </div>
+
+                
             </div>
 
             <button type="submit" class="btn btn-primary my-3">เพิ่ม</button>
