--- a/Views/Admin/StudyResult.cshtml
+++ b/Views/Admin/StudyResult.cshtml
@@ -67,8 +67,10 @@
                     <tr>
                        
                         <th>รหัสเทียบวิชา</th>
-                        <th>วิชา ปวส.</th>
-                        <th>วิชา CS</th>
+                        <th>รหัสวิชาวิทย์คอม</th>
+                        <th>วิชาวิทย์คอม</th>
+                        <th>รหัสวิชาปวส.</th>
+                        <th>วิชาปวส.</th>
                         <th>เกรดปวส.</th>
                         <th>ลบ</th>
 
@@ -80,8 +82,10 @@
                         <tr>
                            
                             <td>@Model[i].CodeSubtrans</td>
-                            <td>@Model[i].Namethaitra</td>
+                            <td>@Model[i].Codesubcs</td>
                             <td>@Model[i].Namethaics</td>
+                            <td>@Model[i].Codesubtra</td>
+                            <td>@Model[i].Namethaitra</td>
                             <td>
                                 @Html.TextBoxFor(modelItem => modelItem[i].GradeTra)
                                 @Html.HiddenFor(x => x[i].Id)
