--- a/Views/Home/CourseTra.cshtml
+++ b/Views/Home/CourseTra.cshtml
@@ -43,11 +43,10 @@
         <span class="w3-bar-item w3-border-bottom w3-large">User</span>
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
-        <a class="w3-bar-item w3-button" href="@Url.Action("Index","Home")">หน้าแรก</a>
+        <a class="w3-bar-item w3-button" asp-area="Identity" asp-page="/Account/Image">รูปทรานสคริปต์</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("FullCourseCs","Home")">หลักสูตรวิทย์คอม</a>
         <a class="w3-bar-item w3-button w3-pale-blue">หลักสูตรปวส.</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("TransResult","Home")">ผลการเทียบโอน</a>
-        <a class="w3-bar-item w3-button" asp-area="Identity" asp-page="/Account/Image">รูปทรานสคริปต์</a>
     </nav>
 
     <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
@@ -82,12 +81,12 @@
                             <td>
                                 <a class="btn btn-warning" asp-controller="Home"
                                 asp-action="DetailCourseTra"
-                                asp-route-id="@courseTra.Codecoursetra">View</a>
+                                asp-route-id="@courseTra.Codecoursetra">ดูข้อมูล</a>
                             </td>
                             <td>
                                 <a class="btn btn-warning" asp-controller="Home"
                                    asp-action="FullCourseTra"
-                                   asp-route-id="@courseTra.Codecoursetra">Full</a>
+                                   asp-route-id="@courseTra.Codecoursetra">ดูข้อมูล</a>
                             </td>
                     </tr>
                 }
