--- a/Views/Home/DetailCourseTra.cshtml
+++ b/Views/Home/DetailCourseTra.cshtml
@@ -89,7 +89,7 @@
                             <center>
                                 <a class="btn btn-warning" asp-controller="Home"
                                    asp-action="DetailSubTra"
-                                   asp-route-id="@CourseTra.Codetrasub">Detail</a>
+                                   asp-route-id="@CourseTra.Codetrasub">ดูข้อมูล</a>
                             </center>
                         </td>
 
