--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -33,11 +33,11 @@
                         <label asp-for="Input.LastName" class="form-label">นามสกุล</label>
                         <span asp-validation-for="Input.LastName" class="text-danger"></span>
                     </div>
-                    <div class="form-floating mb-3" hidden>
+                    @* <div class="form-floating mb-3" hidden>
                         <input asp-for="Input.InsCode" class="form-control">
                         <label asp-for="Input.InsCode" class="form-label">รหัสสถาบัน</label>
                         <span asp-validation-for="Input.InsCode" class="text-danger"></span>
-                    </div>
+                    </div> *@
                     <div class="form-floating mb-3">
                         <input asp-for="Input.Facebook" class="form-control">
                         <label asp-for="Input.Facebook" class="form-label">Facebook</label>
@@ -78,11 +78,11 @@
                         <label asp-for="Input.LastName" class="form-label">นามสกุล</label>
                         <span asp-validation-for="Input.LastName" class="text-danger"></span>
                     </div>
-                    <div class="form-floating mb-3">
+                    @* <div class="form-floating mb-3">
                         <input asp-for="Input.InsCode" class="form-control" disabled>
                         <label asp-for="Input.InsCode" class="form-label">รหัสสถาบัน</label>
                         <span asp-validation-for="Input.InsCode" class="text-danger"></span>
-                    </div>
+                    </div> *@
                     <div class="form-floating mb-3">
                         <input asp-for="Input.Codecoursetra" class="form-control" disabled>
                         <label asp-for="Input.Codecoursetra" class="form-label">รหัสหลักสูตร</label>
