--- a/Areas/Identity/Pages/Account/Image.cshtml
+++ b/Areas/Identity/Pages/Account/Image.cshtml
@@ -76,9 +76,14 @@
 
             <div class="form-group">
                 <label asp-for="FileUpload.FormFile" class="control-label">ไฟล์ทรานสคริปต์</label><br /><br />
-                <input asp-for="FileUpload.FormFile" class="form-control" />
+                        <input asp-for="FileUpload.FormFile" accept="application/pdf" class="form-control" />
                 <span asp-validation-for="FileUpload.FormFile" class="text-danger"></span>
             </div>
+                    <div class="form-group">
+                        <label asp-for="FileUpload2.FormFile" class="control-label">ไฟล์หลักสูตร</label><br /><br />
+                        <input asp-for="FileUpload2.FormFile" accept="application/pdf" class="form-control" />
+                        <span asp-validation-for="FileUpload2.FormFile" class="text-danger"></span>
+                    </div>
             <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
