--- a/Areas/Identity/Pages/Account/Image.cshtml
+++ b/Areas/Identity/Pages/Account/Image.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ProjectFinal1.Areas.Identity.Pages.Account.ImageModel
+ @model ProjectFinal1.Areas.Identity.Pages.Account.ImageModel
 <html lang="en">
 @{
     ViewData["Title"] = "Image";
@@ -55,33 +55,26 @@
     <header class="w3-container" style="padding:26px 32px">
         <h1 class="w3-xxlarge">ทรานสคริปต์</h1>
     </header>
-    <partial name="_StatusMessage" for="StatusMessage" />
+     
     <div class="col-md-4">
         <form method="post" enctype="multipart/form-data">
             
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.Transcode" class="form-control" autocomplete="Transcode" aria-required="true" maxlength="14" placeholder="รหัสนักศึกษา" />
-                <label asp-for="Input.Transcode">รหัสนักศึกษา</label>
-                <span asp-validation-for="Input.Transcode" class="text-danger"></span>
+              
             </div>
 
             <div class="form-floating mb-3" hidden>
-                <select asp-for="Input.Status" class="form-control" >
-                    <option value="มีไฟล์">มีไฟล์</option>
-                </select>
-                <label asp-for="Input.Status"></label>
+               
             </div> 
 
             <div class="form-group">
-                <label asp-for="FileUpload.FormFile" class="control-label">ไฟล์ทรานสคริปต์</label><br /><br />
-                        <input asp-for="FileUpload.FormFile" accept="application/pdf" class="form-control" />
-                <span asp-validation-for="FileUpload.FormFile" class="text-danger"></span>
+                      
+           <input type="file" name="file1" value="" />
             </div>
                     <div class="form-group">
-                        <label asp-for="FileUpload2.FormFile" class="control-label">ไฟล์หลักสูตร</label><br /><br />
-                        <input asp-for="FileUpload2.FormFile" accept="application/pdf" class="form-control" />
-                        <span asp-validation-for="FileUpload2.FormFile" class="text-danger"></span>
+
+                        <input type="file" name="file2" value="" />
                     </div>
             <br />
             <div class="form-group">
