--- a/Views/Admin/DetailCourseTra.cshtml
+++ b/Views/Admin/DetailCourseTra.cshtml
@@ -55,7 +55,7 @@
 
         <header class="w3-container w3-pale-white" style="padding:26px 32px">
 
-            <Center><h1>@Model.FirstOrDefault()?.Namecoursetra</h1></Center>
+            <Center><h1 class="w3-xxxlarge">@Model.FirstOrDefault()?.Namecoursetra</h1></Center>
 
         </header>
 
