--- a/Views/Home/DetailSubTra.cshtml
+++ b/Views/Home/DetailSubTra.cshtml
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Include jQuery -->s
+    <!-- Include jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
     <!-- Include DataTables CSS and JS files -->
