--- a/Views/Home/CourseTra.cshtml
+++ b/Views/Home/CourseTra.cshtml
@@ -53,7 +53,7 @@
 
     <div class="w3-main" style="margin-left:250px;">
         <header class="w3-container" style="padding:26px 32px">
-            <center><h1 class="w3-xxlarge">หลักสูตรปวส.</h1></center>
+            <center><h1 class="w3-xxxlarge">หลักสูตรปวส.</h1></center>
         </header>
         <br />
 
