--- a/Views/Admin/CourseTraAdmin.cshtml
+++ b/Views/Admin/CourseTraAdmin.cshtml
@@ -58,7 +58,7 @@
             <center><h1 class="w3-xxxlarge">หลักสูตรปวส.</h1></center>
         </header>
         <br />
-        <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="AddCourseTra"><span style="color:white;">+ เพิ่มหลักสูตรปวส.</span></a> <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="AddSubTra"><span style="color:white;">+ เพิ่มการจับคู่วิชาปวส.</span></a><br>
+        <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="AddCourseTra"><span style="color:white;">+ เพิ่มหลักสูตรปวส.</span></a> <a class="btn btn-group" style="background-color:Green;" asp-controller="Admin" asp-action="AddSubTra"><span style="color:white;">+ เพิ่มรายวิชาปวส.</span></a><br>
         @if (Model.Count() > 0)
         {
             <br>
