--- a/Areas/Identity/Pages/Account/Image.cshtml
+++ b/Areas/Identity/Pages/Account/Image.cshtml
@@ -45,7 +45,7 @@
         <span class="w3-bar-item w3-border-bottom w3-large">User</span>
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
-        <a class="w3-bar-item w3-button w3-pale-blue">รูปทรานสคริปต์</a>
+        <a class="w3-bar-item w3-button w3-pale-blue">อัพโหลดไฟล์</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("FullCourseCs","Home")">หลักสูตรวิทย์คอม</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("CourseTra","Home")">หลักสูตรปวส.</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("TransResult","Home")">ผลการเทียบโอน</a>
@@ -56,7 +56,7 @@
     <div class="w3-main" style="margin-left:250px;">
         <center>
             <header class="w3-container" style="padding:26px 32px">
-                <h1 class="w3-xxlarge">ทรานสคริปต์</h1>
+                <h1 class="w3-xxlarge">อัพโหลดไฟล์</h1>
             </header>
 
             <div class="col-md-4">
