--- a/Views/Admin/TableData.cshtml
+++ b/Views/Admin/TableData.cshtml
@@ -96,7 +96,7 @@
                         <td>
                             @if (DataUser.FileContent != null && DataUser.FileContent.Length > 0)
                             {
-                                <a href="/admin/PdfView?fileName=@DataUser.FileName&userName=@DataUser.UserName" target="_blank">ทรานสคริปต์: @DataUser.FileName</a>
+                                <a href="/admin/PdfView?fileName=@DataUser.FileName&userName=@DataUser.UserName" target="_blank">ดาวน์โหลดไฟล์</a>
 
                                 <br />
 
@@ -105,7 +105,7 @@
                         <td>
                             @if (DataUser.FileContent2 != null && DataUser.FileContent2.Length > 0)
                             {
-                                <a href="/admin/PdfView?fileName=@DataUser.FileName2&userName=@DataUser.UserName" target="_blank">หลักสูตร: @DataUser.FileName2</a>
+                                <a href="/admin/PdfView?fileName=@DataUser.FileName2&userName=@DataUser.UserName" target="_blank">ดาวน์โหลดไฟล์</a>
 
                             }
                         </td>
