--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -33,11 +33,6 @@
                         <label asp-for="Input.LastName" class="form-label">นามสกุล</label>
                         <span asp-validation-for="Input.LastName" class="text-danger"></span>
                     </div>
-                    @* <div class="form-floating mb-3" hidden>
-                        <input asp-for="Input.InsCode" class="form-control">
-                        <label asp-for="Input.InsCode" class="form-label">รหัสสถาบัน</label>
-                        <span asp-validation-for="Input.InsCode" class="text-danger"></span>
-                    </div> *@
                     <div class="form-floating mb-3">
                         <input asp-for="Input.Facebook" class="form-control">
                         <label asp-for="Input.Facebook" class="form-label">Facebook</label>
@@ -78,14 +73,17 @@
                         <label asp-for="Input.LastName" class="form-label">นามสกุล</label>
                         <span asp-validation-for="Input.LastName" class="text-danger"></span>
                     </div>
-                    @* <div class="form-floating mb-3">
-                        <input asp-for="Input.InsCode" class="form-control" disabled>
-                        <label asp-for="Input.InsCode" class="form-label">รหัสสถาบัน</label>
-                        <span asp-validation-for="Input.InsCode" class="text-danger"></span>
-                    </div> *@
                     <div class="form-floating mb-3">
-                        <input asp-for="Input.Codecoursetra" class="form-control" disabled>
-                        <label asp-for="Input.Codecoursetra" class="form-label">รหัสหลักสูตร</label>
+                        <select asp-for="Input.Codecoursetra" class="form-control" aria-required="true" placeholder="รหัสหลักสูตรปวส.">
+                            <option hidden value=""></option>
+                            @foreach (var item in Model.TraCourse)
+                            {
+                                <option value="@item.Value">
+                                    @item.Text
+                                </option>
+                            }
+                        </select>
+                        <label asp-for="Input.Codecoursetra" class="form-label">หลักสูตร</label>
                         <span asp-validation-for="Input.Codecoursetra" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
@@ -100,7 +98,7 @@
                     </div>
                     <div class="form-floating mb-3">
                         <input asp-for="Input.Status" class="form-control" disabled>
-                        <label asp-for="Input.Status" class="form-label">สถานะ</label>
+                        <label asp-for="Input.Status" class="form-label">อัพโหลดไฟล์</label>
                         <span asp-validation-for="Input.Status" class="text-danger"></span>
                     </div>
                     <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
