--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
             <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
             <a class="w3-bar-item w3-button w3-pale-blue">หน้าแรก</a>
-            <a class="w3-bar-item w3-button" asp-area="Identity" asp-page="/Account/Image">รูปทรานสคริปต์</a>
+            <a class="w3-bar-item w3-button" asp-area="Identity" asp-page="/Account/Image">อัพโหลดไฟล์</a>
             <a class="w3-bar-item w3-button" href="@Url.Action("FullCourseCs","Home")">หลักสูตรวิทย์คอม</a>
             <a class="w3-bar-item w3-button" href="@Url.Action("CourseTra","Home")">หลักสูตรปวส.</a>
             <a class="w3-bar-item w3-button" href="@Url.Action("TransResult","Home")">ผลการเทียบโอน</a>
